"Fix" buttons on mobile (move background-image to top)

--- a/showpony/styles.css
+++ b/showpony/styles.css
@@ -254,6 +254,8 @@
 	box-sizing:border-box;
 	
 	background-size:contain;
+	background-position:50% 0%;
+	background-repeat:no-repeat;
 }
 
 .s-buttons button:active{
